# shelley-sprites

./: .gitignore  README.md  SETUP.md  pyproject.toml
src/shelley_sprites/: __init__.py  generate.py  palette.py  server.py  sheets.py
